present: Don't flip between BOs with different tiling parameters

The kernel driver doesn't handle that correctly yet.

Fixes or at least avoids issues with OpenGL fullscreen apps with DRI3
enabled and using PRIME or with (2D) tiling disabled.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=89720

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>